--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html>
 <head>
 	<title>My Family Tree</title>
+
 </head>
 <body>
 
+
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script type="text/javascript" src="assets/javascript/code.js"></script>
 </body>
 </html>
