--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>My Family Tree</title>
+	<link rel="shortcut icon" type="image/x-icon" href="assets/images/logo.jpg" />
 
 </head>
 <body>
