--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
   </footer>
 
 
-
+	<h2>Add Person Details</h2>
+	<button>Submit</button>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script type="text/javascript" src="assets/javascript/code.js"></script>
 
