Updated landing page and updated code.js

--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!doctype html>
 <html lang="en-us">
-
 <head>
   <meta charset="UTF-8">
   <title>Contact | Your Name</title>
   <link rel="shortcut icon" type="image/x-icon" href="assets/images/logo.jpg" />
-  <script src="https://www.gstatic.com/firebasejs/3.7.1/firebase.js"></script>
-
-  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -20,7 +17,6 @@
 
     </div>
   </header>
-  <br>
   <div id="main-container" class="container">
     <form>
       <div id='addFamilyMember' class="panel panel-default">
@@ -29,28 +25,21 @@
 
           <div class="btn-group btn-group-justified" role="group" aria-label="...">
               <div class="btn-group" role="group">
-                <button type="button" class="btn btn-default">Navin</button>
+                <button type="button" class="btn btn-default familyGroup" name="Navin">Navin</button>
               </div>
               <div class="btn-group" role="group">
-                <button type="button" class="btn btn-default">Veronica</button>
+                <button type="button" class="btn btn-default familyGroup" name="Veronica">Veronica</button>
               </div>
               <div class="btn-group" role="group">
-                <button type="button" class="btn btn-default">Leon</button>
+                <button type="button" class="btn btn-default familyGroup" name="Leon">Leon</button>
               </div>
               <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-default">Monica</button>
+                  <button type="button" class="btn btn-default familyGroup" name="Monica">Monica</button>
                 </div>
             </div>
         </div>
         <div class="form-group">
-
-        <form action="/action_page.php">
-            <input type="file" name="profilePic" accept="image/*"> 
-          </form>
-
-
          <label class="col-form-label" for="Relationship">Relationship </label> 
-
          <select>
             <option label="Grandparent">Grandparent</option>
             <option label="Parent">Parent</option>
@@ -58,11 +47,7 @@
             <option label="Spouse">Spouse)</option>
             <option label="Child">Child</option>
         </select>
-
          <br>
-         
-
-         
           <label class="col-form-label" for="firstName">First Name</label>
           <input type="text" class="form-control" id="firstNameInput" placeholder="Enter First Name">
           <label class="col-form-label" for="firstName">Last Name</label>
@@ -81,33 +66,21 @@
           <input type="text" class="form-control" id="favoriteQuoteInput" placeholder="Enter your favorite quote ">
           <label class="col-form-label" for="favoriteSong">Favorite Song</label>
           <input type="text" class="form-control" id="favoriteSongInput" placeholder="Enter your favorite song ">
+          <label class="col-form-label" for="favoriteSong">Add Your Photo</label>
+          <form action="/action_page.php">
+            <input type="file" name="profilePic" accept="image/*"> 
+          </form>
 
         </div>
       </div>
-
       <button id='submit' type="submit" class="btn btn-primary">Submit</button>
-      <br><br><br>
-
-
-
-
-
-      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-      <script type="text/javascript" src='assets/javascript/code.js'></script>
-      <script type="text/javascript">
-      </script>
     </form>
-
   </div>
-<!-- 
-  <h2>Add Person Details</h2>
-
-  <button>Submit</button> -->
+  <script src="https://www.gstatic.com/firebasejs/3.7.1/firebase.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-    crossorigin="anonymous"></script>
-  <!-- <script type="text/javascript" src="assets/javascript/code.js"></script> -->
+  crossorigin="anonymous"></script>
+  <script type="text/javascript" src="assets/javascript/code.js"></script>
 
 </body>
 
