--- a/index.html
+++ b/index.html
@@ -2,85 +2,119 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
-  <title>Contact | Your Name</title>
+  <title>Origins Tree</title>
   <link rel="shortcut icon" type="image/x-icon" href="assets/images/logo.jpg" />
   <!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-    crossorigin="anonymous">
+  crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Family Tree</a>
-
+      <a href="index.html" id="logo">family tree</a>
     </div>
   </header>
+
   <div id="main-container" class="container">
-    <form>
-      <div id='addFamilyMember' class="panel panel-default">
-        <div class="panel-heading" id="formheading">
-          Add Family Member for ...
 
-          <div class="btn-group btn-group-justified" role="group" aria-label="...">
-              <div class="btn-group" role="group">
-                <button type="button" class="btn btn-default familyGroup" name="Navin">Navin</button>
-              </div>
-              <div class="btn-group" role="group">
-                <button type="button" class="btn btn-default familyGroup" name="Veronica">Veronica</button>
-              </div>
-              <div class="btn-group" role="group">
-                <button type="button" class="btn btn-default familyGroup" name="Leon">Leon</button>
-              </div>
-              <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-default familyGroup" name="Monica">Monica</button>
-                </div>
-            </div>
-        </div>
-        <div class="form-group">
-         <label class="col-form-label" for="Relationship">Relationship </label> 
-         <select>
-            <option label="Grandparent">Grandparent</option>
-            <option label="Parent">Parent</option>
-            <option label="Sibling">Sibling</option>
-            <option label="Spouse">Spouse)</option>
-            <option label="Child">Child</option>
-        </select>
-         <br>
-          <label class="col-form-label" for="firstName">First Name</label>
-          <input type="text" class="form-control" id="firstNameInput" placeholder="Enter First Name">
-          <label class="col-form-label" for="firstName">Last Name</label>
-          <input type="text" class="form-control" id="lastNameInput" placeholder="Enter Last Name">
-          <label class="col-form-label" for="dob">Date of Birth (MM/DD/YYYY)</label>
-          <input type="text" class="form-control" id="dobInput" placeholder="Enter Date of Birth">
-          <label class="col-form-label" for="birthPlace">Birth Place</label>
-          <input type="text" class="form-control" id="birthPlaceInput" placeholder="Enter Birth Place">
-            <label class="col-form-label" for="Occupation">Occupation</label>
-          <input type="text" class="form-control" id="occupationInput" placeholder="Enter your occupation ">
-          <label class="col-form-label" for="hobbies">Hobbies</label>
-          <input type="text" class="form-control" id="hobbiesInput" placeholder="Enter your favorite hobby">
-          <label class="col-form-label" for="favoriteMovie">Favorite Movie</label>
-          <input type="text" class="form-control" id="favoriteMovieInput" placeholder="Enter your favorite movie ">
-          <label class="col-form-label" for="favoriteQuote">Favorite Quote</label>
-          <input type="text" class="form-control" id="favoriteQuoteInput" placeholder="Enter your favorite quote ">
-          <label class="col-form-label" for="favoriteSong">Favorite Song</label>
-          <input type="text" class="form-control" id="favoriteSongInput" placeholder="Enter your favorite song ">
-          <label class="col-form-label" for="favoriteSong">Add Your Photo</label>
-          <form action="/action_page.php">
-            <input type="file" name="profilePic" accept="image/*"> 
-          </form>
+    <!-- container for fam.box
+    <div class="boxed">
+      This text is enclosed in a box.
+    </div>
+    <div class="boxed">
+  This text is enclosed in a box.
+</div>
+<div class="boxed">
+  This text is enclosed in a box.
+</div>
+<div class="boxed">
+  This text is enclosed in a box.
+</div>
 
+<div class="boxed">
+  This text is enclosed in a box.
+</div>
+
+<div class="boxed">
+  This text is enclosed in a box.
+</div>
+
+<div class="boxed">
+  This text is enclosed in a box.
+</div>
+
+<div class="boxed">
+  This text is enclosed in a box.
+</div>
+-->
+
+  </div>
+
+  <form>
+    <div id='addFamilyMember' class="panel panel-default">
+      <div class="panel-heading" id="formheading">
+        Add Family Member for ...
+
+        <div class="btn-group btn-group-justified" role="group" aria-label="...">
+          <div class="btn-group" role="group">
+            <button type="button" class="btn btn-default familyGroup" name="Navin">Navin</button>
+          </div>
+          <div class="btn-group" role="group">
+            <button type="button" class="btn btn-default familyGroup" name="Veronica">Veronica</button>
+          </div>
+          <div class="btn-group" role="group">
+            <button type="button" class="btn btn-default familyGroup" name="Leon">Leon</button>
+          </div>
+          <div class="btn-group" role="group">
+            <button type="button" class="btn btn-default familyGroup" name="Monica">Monica</button>
+          </div>
         </div>
       </div>
-      <button id='submit' type="submit" class="btn btn-primary">Submit</button>
-    </form>
+      <div class="form-group">
+       <label class="col-form-label" for="Relationship">Relationship </label> 
+       <select>
+        <option label="Grandparent">Grandparent</option>
+        <option label="Parent">Parent</option>
+        <option label="Sibling">Sibling</option>
+        <option label="Spouse">Spouse)</option>
+        <option label="Child">Child</option>
+      </select>
+      <br>
+      <label class="col-form-label" for="firstName">First Name</label>
+      <input type="text" class="form-control" id="firstNameInput" placeholder="Enter First Name">
+      <label class="col-form-label" for="firstName">Last Name</label>
+      <input type="text" class="form-control" id="lastNameInput" placeholder="Enter Last Name">
+      <label class="col-form-label" for="dob">Date of Birth (MM/DD/YYYY)</label>
+      <input type="text" class="form-control" id="dobInput" placeholder="Enter Date of Birth">
+      <label class="col-form-label" for="birthPlace">Birth Place</label>
+      <input type="text" class="form-control" id="birthPlaceInput" placeholder="Enter Birth Place">
+      <label class="col-form-label" for="Occupation">Occupation</label>
+      <input type="text" class="form-control" id="occupationInput" placeholder="Enter your occupation ">
+      <label class="col-form-label" for="hobbies">Hobbies</label>
+      <input type="text" class="form-control" id="hobbiesInput" placeholder="Enter your favorite hobby">
+      <label class="col-form-label" for="favoriteMovie">Favorite Movie</label>
+      <input type="text" class="form-control" id="favoriteMovieInput" placeholder="Enter your favorite movie ">
+      <label class="col-form-label" for="favoriteQuote">Favorite Quote</label>
+      <input type="text" class="form-control" id="favoriteQuoteInput" placeholder="Enter your favorite quote ">
+      <label class="col-form-label" for="favoriteSong">Favorite Song</label>
+      <input type="text" class="form-control" id="favoriteSongInput" placeholder="Enter your favorite song ">
+      <label class="col-form-label" for="favoriteSong">Add Your Photo</label>
+      <form action="/action_page.php">
+        <input type="file" name="profilePic" accept="image/*"> 
+      </form>
+
+    </div>
   </div>
-  <script src="https://www.gstatic.com/firebasejs/3.7.1/firebase.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-  crossorigin="anonymous"></script>
-  <script type="text/javascript" src="assets/javascript/code.js"></script>
+  <button id='submit' type="submit" class="btn btn-primary">Submit</button>
+</form>
+</div>
+<script src="https://www.gstatic.com/firebasejs/3.7.1/firebase.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+crossorigin="anonymous"></script>
+<script type="text/javascript" src="assets/javascript/code.js"></script>
 
 </body>
 
