--- a/memberDetails.html
+++ b/memberDetails.html
@@ -9,12 +9,13 @@
   <title>Family Member</title>
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/logo.jpg" />
 
-
   <!-- Bootstrap CDN -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Homemade+Apple|Love+Ya+Like+A+Sister|Pangolin|Special+Elite" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Homemade+Apple|Love+Ya+Like+A+Sister|Pangolin|Special+Elite" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+
 </head>
 
 <body>
@@ -126,8 +127,6 @@
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
   <h1>In News the Year You Were Born</h1>
-  <input id="searchTerm" name="search" placeholder="Search..">
-  <button id='search' type="button" class ="btn btn-primary">Submit</button>
   <div id="output"></div>
 </div>
     <script src="https://www.gstatic.com/firebasejs/3.7.1/firebase.js"></script>
