flickr and created test link from main pg to indv html

--- a/memberDetails.html
+++ b/memberDetails.html
@@ -69,16 +69,23 @@
  </div>              
   <div class="row">
     <div class="col-md-6">
-      <img id="hobby-1" src="assets/images/tamales.jpg" alt="snowboarding" style="width: 70%; height: auto; object-fit: cover; padding-top:20px";>
-      <h2 id="hobby1" class="img-text">cooking</h2>
+      <img id="hobby1" src="assets/images/tamales.jpg" alt="snowboarding" style="width: 70%; height: auto; object-fit: cover; padding-top:20px";>
+      <h2 id="hobbies" class="img-text"></h2>
     </div>
-<div class="col-md-6">
-      <img id="hobby-2" src="assets/images/vallarta.jpg" alt="snowboarding" style="width: 70%; height: auto; object-fit: cover; padding-top:20px";>
-      <h2 id="hobby2" class="img-text">travel</h2>
-    </div>
-    </div> 
+  <div class="col-md-6">
+      <img id="hobby2" src="assets/images/vallarta.jpg" alt="snowboarding" style="width: 70%; height: auto; object-fit: cover; padding-top:20px";>
+      <h2 id="hobbiestoo" class="img-text">s</h2>
+  </div>
+
+</div> 
 
 <br><br>
+
+<!-- test for flickr -->
+  <div id="flickr" class="row">
+      <div class="col-md-12">
+      </div>
+  </div>
 <!-- youtube video replace "watch?v=" with "embed/" in the youtube link to display it in webpage -->
 <!-- replace xxxxxx with video ID. console log shows it is "data.items[0].id.videoId" -->
 
